Changed black bar behind header to be absolute instead of fixed. Fixes black bar scrolling as user scrolls instead of remaining behind header.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -59,7 +59,7 @@ body {
 }
 
 .header-black-bar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
